# apscale_blast2

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: apscale_blast2_manual_v1.1.2.md  apscale_blast2_manual_v1.1.2.qmd
examples/: Example_16S_Bacteria_200.fasta  Example_RBCL_200.fasta  Prueba_12S_200.fasta  Prueba_COI_200.fasta
src/apscale_blast2/: __init__.py  blast_runner.py  blast_tools.py  cli.py  db_build_diatbarcode.py  db_build_midori2.py  db_build_pr2.py  db_build_silva.py  db_build_trnl.py  db_build_unite.py  db_defaults.py  db_home.py  dbs.py  filtering.py  io_utils.py  taxmap.py  taxonomy_clean.py
src/apscale_blast2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
